--- a/package.json
+++ b/package.json
@@ -8,12 +8,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
+    "@sentry/react-native": "^3.3.0",
+    "date-fns": "^2.28.0",
     "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
+    "expo-app-loading": "^1.3.0",
+    "expo-camera": "^12.1.2",
+    "expo-device": "~4.1.0",
+    "expo-font": "^10.0.5",
+    "expo-status-bar": "^1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-actionsheet": "^2.4.2",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-toast-message": "^2.1.1",
+    "react-native-web": "0.17.1",
+    "sentry-expo": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
